k8s/05-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-echo-redirect
  namespace: demo
spec:
  parentRefs:
  - name: http-echo-gw
    sectionName: http
  hostnames:
  - "demo.myip.nip.io"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        port: 443

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-echo-route
  namespace: demo
spec:
  parentRefs:
    - name: http-echo-gw
      sectionName: https
  hostnames:
    - "demo.myip.nip.io"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: endpoint-root-svc
        port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /blue-green
      backendRefs:
        - name: endpoint-blue-svc
          port: 8080
          weight: 25
        - name: endpoint-green-svc
          port: 8080
          weight: 75
    - matches:
      - path:
          type: PathPrefix
          value: /vip
        headers:
          - name: "X-User-Type"
            value: "vip"
      backendRefs:
        - name: endpoint-vip-svc
          port: 8080
